# dip

./: .gitignore  CMakeLists.txt
include/: Filter.h  Gaussian.h  Grid.cpp  Grid.h  Image.h  ImageException.h  _gauss_seidel.h  arithematic.h  imageOperations.h  iterative_solvers.h  levelset.h  meshProc.h  optical_flow.h  print.h  proc.h  typedefs.h
src/: Filter.cpp  Gaussian.cpp  Grid.cpp  Image.cpp  Image.h  glad.c  gui_example.cpp  helloWindow.cpp  histogram.cpp  histogram.h  imageOperations.cpp  levelset.cpp  main.cpp  meshProc.cpp  optical_flow.cpp  proc.cpp
test/: pset1.cpp  test_filter.cpp  test_gauss_seidel.cpp  test_helloPangolin.cpp  test_image.cpp  test_imageOperations.cpp  test_image_io.cpp  test_image_proc.cpp  test_lodepng.cpp  test_matplotlibcpp.cpp  test_otherFilters.cpp  test_pangolin_plot.cpp  test_print.cpp.cpp  test_sparseMtx.cpp
